Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -315,9 +315,8 @@ nav ol, nav ul {
   font-size: 1em;
   margin-bottom: 0;
 }
-nav > details > ul {
-  margin-top: var(--line-height);
-}
+nav > details > ul
+  { margin-top: var(--line-height) }
 li, dd
   { margin: 0 0 1em 1em }
 nav li, nav li {
